  saving of VARs in gretl session files)
- Various small fixes for spreadsheet data importers
- Compaction of daily to weekly data: enable this even if the daily data
  are not dated
- "system" command: various small fixes and enhancements
- Fix bug: misbehavior of substitution of named strings in some loop
  contexts
- Fix bug: breakage in handling of string-valued variables in CVS import
- For third-party users of libgretl: improve handling of search for the
  gretl plugins

2011-12-22 version 1.9.7
- Add two nonparametric estimators: William Cleveland's loess and the
  Nadaraya-Watson estimator; these are available via the new functions
  loess() and nadarwat(), and they're also in the GUI Model menu
- Binary logit and probit: re-implement using Newton-Raphson for
  greater numerical stability
- Documentation updates, including a new chapter on Nonparametric
  methods in the User's Guide
- "store" command: add a --decimal-comma option to export "CSV" data 
  using "," as decimal character (and ";" as column delimiter)
- "leverage" command: add a --quiet option and add calculation of the
  cross-validation criterion (available via the $test accessor)
- "rmplot" command (range-mean plot): add a --trim option to discard the
  minimum and maximum from each sub-sample
- "gnuplot" command: enhance the --with-lines option to permit using
  lines for some series and points for others
- "scatters" command: add a --matrix option and increase the maximum
  number of plots to 16
- Plots in GUI: add option to show semilog fitted line, and make the
  option to show a grid more configurable
- New function simann() provides user access to simulated annealing
- Speed up the production of bootstrapped confidence bands for impulse 
  responses in VECM models
- Internationalized TeX output: always use UTF-8 encoding
- Online help: ensure that option flags don't break across lines (and
  also colorize them for emphasis)